add title to html5slides template so that it can be set manuall

--- a/inst/templates/html5slides.html
+++ b/inst/templates/html5slides.html
@@ -13,7 +13,7 @@ URL: http://code.google.com/p/html5slides/
 	
 <html>
 <head>
-	<title>Presentation</title>
+	<title>{{title}}</title>
 	<meta charset='utf-8'>
 	
 	<!-- LOAD STYLE SHEETS -->
