update templates to use header variable extracted by parse_slide

--- a/inst/templates/deck.js.html
+++ b/inst/templates/deck.js.html
@@ -40,7 +40,8 @@
   <!-- Begin slides -->
   {{#slides}}
   <section class="slide">
-	  {{{content}}}
+    {{{ header }}}
+	  {{{ content }}}
   </section>
   {{/slides}}
   <!-- deck.navigation snippet -->
