--- a/inst/templates/dzslides.html
+++ b/inst/templates/dzslides.html
@@ -122,7 +122,8 @@
 <body>
   {{#slides}}
   <section class = "{{classes}}">
-    {{{content}}}
+    {{{ header }}}
+    {{{ content }}}
   </section>
   {{/slides}}
 
