--- a/inst/templates/html5slides.html
+++ b/inst/templates/html5slides.html
@@ -26,7 +26,8 @@ URL: http://code.google.com/p/html5slides/
 	<section class='slides {{layout}} {{template}}'>
     {{#slides}}
 	  <article class = "{{classes}}" id = "{{id}}"> 
-      {{{content}}}
+	    {{{ header }}}
+      {{{ content }}}
     </article>
     {{/slides}}  
   </section>
