add ability to display source code via bootstrap modal

--- a/inst/templates/landslide.html
+++ b/inst/templates/landslide.html
@@ -71,12 +71,25 @@
             </section>
             {{/p_notes}}
           </div>
+          
+          <div class="modal hide" id="source-{{ num }}" style='display:none'>
+            <div class="modal-body">
+            <pre><code>
+{{ raw }}
+            </code></pre>
+            </div>
+            <div class="modal-footer">
+              <a href="#" class="btn" data-dismiss="modal">Close</a>
+              <a href="#" class="btn btn-primary">Save changes</a>
+            </div>
+          </div>
+          
           <footer>
-            {{#source}}
             <aside class="source">
-              Source: <a href="{{ source }}">{{ source }}</a>
+              <a class="btn" data-toggle="modal" href="#source-{{ num }}">
+                View Source
+              </a>
             </aside>
-            {{/source}}
             <aside class="page_number">
               {{ num }} / {{ num_slides }}
             </aside>
@@ -106,4 +119,6 @@
   <script>main()</script>
   {{> mathjax}}
   {{> highlight_js}}
+  <script src="http://www.w3resource.com/twitter-bootstrap/twitter-bootstrap-v2/docs/assets/js/jquery.js"></script>
+  <script src="http://www.w3resource.com/twitter-bootstrap/twitter-bootstrap-v2/js/bootstrap-modal.js"></script>
 </html>
