--- a/inst/partials/mathjax.html
+++ b/inst/partials/mathjax.html
@@ -1,9 +1,12 @@
 {{#mathjax}}
 <!-- LOAD MATHJAX JS -->
   <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-      tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
-    });
+     MathJax.Hub.Config({
+       tex2jax: {
+         inlineMath: [['$','$'], ['\\(','\\)']],
+         processEscapes: true
+       }
+     });
   </script>
   <script type="text/javascript"  
 src="https://c328740.ssl.cf1.rackcdn.com/mathjax/2.0-latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
