collapse layout and template into theme for html5slides

--- a/inst/templates/html5slides.html
+++ b/inst/templates/html5slides.html
@@ -23,7 +23,7 @@ URL: http://code.google.com/p/html5slides/
   
 </head>
 <body style='display: none'>
-	<section class='slides {{layout}} {{template}}'>
+	<section class='slides {{theme}}'>
     {{#slides}}
 	  <article class = "{{classes}}" id = "{{id}}"> 
 	    {{{ header }}}
