clean up meta data in all templates

--- a/inst/templates/deck.js.html
+++ b/inst/templates/deck.js.html
@@ -6,12 +6,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=1024, user-scalable=no">
 	
 	<title>{{ title }}</title>
+  <meta name="description" content="{{title}}">
+  <meta name="author" content="{{author}}">
+  <meta name="generator" content="slidify" />
 	
-	<meta name="description" content="A jQuery library for modern HTML presentations">
-	<meta name="author" content="Caleb Troughton">
-	<meta name="viewport" content="width=1024, user-scalable=no">
+	
 	
 	<!-- Core and extension CSS files -->
 	<link rel="stylesheet" href="{{lib_path}}/deck.js/core/deck.core.css">
