--- a/inst/templates/dzslides.html
+++ b/inst/templates/dzslides.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <head>
-<meta charset="utf-8">
-  <meta name="author" content="{{author}}" />
-  <title>{{title}}</title>
+  <meta charset="utf-8">
+  
+  <title>{{ title }}</title>
+  <meta name="description" content="{{title}}">
+  <meta name="author" content="{{author}}">
+  <meta name="generator" content="slidify" />
+  
   <!-- LOAD STYLE SHEETS -->
 	<link rel="stylesheet" href="{{lib_path}}/{{highlighter}}/styles/{{histyle}}.css">
   {{> user_css}}	
