--- a/inst/templates/html5slides.html
+++ b/inst/templates/html5slides.html
@@ -13,8 +13,12 @@ URL: http://code.google.com/p/html5slides/
 	
 <html>
 <head>
-	<title>{{title}}</title>
+	
 	<meta charset='utf-8'>
+	<title>{{ title }}</title>
+  <meta name="description" content="{{title}}">
+  <meta name="author" content="{{author}}">
+  <meta name="generator" content="slidify" />
 	
 	<!-- LOAD STYLE SHEETS -->
 	<link rel="stylesheet" href="{{lib_path}}/html5slides/styles.css">
