--- a/inst/templates/shower.html
+++ b/inst/templates/shower.html
@@ -4,6 +4,10 @@
 	<title>Shower Presentation Template</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=1274, user-scalable=no">
+	<title>{{ title }}</title>
+  <meta name="description" content="{{title}}">
+  <meta name="author" content="{{author}}">
+  <meta name="generator" content="slidify" />
 	<!-- LOAD STYLE SHEETS -->
 	<link rel="stylesheet" href="{{lib_path}}/shower/themes/ribbon/styles/style.css">
 	<link rel="stylesheet" href="{{lib_path}}/{{highlighter}}/styles/{{histyle}}.css">  
