--- a/inst/templates/landslide.html
+++ b/inst/templates/landslide.html
@@ -25,7 +25,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{{title}}</title>
+    <title>{{ title }}</title>
+    <meta name="description" content="{{title}}">
+    <meta name="author" content="{{author}}">
+    <meta name="generator" content="slidify" />
+    
     <!-- Styles -->
     
     <link href="{{lib_path}}/landslide/themes/{{theme}}/css/print.css" 
