add google prettify to html5slides layout

--- a/inst/templates/html5slides.html
+++ b/inst/templates/html5slides.html
@@ -40,6 +40,7 @@ URL: http://code.google.com/p/html5slides/
 	<script src='{{lib_path}}/html5slides/slides.js'></script>
 	{{> mathjax}}
 	{{> highlight_js}}
+	{{> google_prettify}}
 	{{> user_js}}
 	
 </html>
