add support for speaker notes in io2012 and landslide themes

--- a/inst/templates/io2012.html
+++ b/inst/templates/io2012.html
@@ -44,6 +44,14 @@ URL: https://code.google.com/p/io-2012-slides
   <article>
   {{{ content }}}
   </article>
+  <!-- Presenter Notes -->
+  {{# pnotes}}
+  <aside class="note">
+    <section>
+      {{{ . }}}
+    </section>
+  </aside>
+  {{/ pnotes}}
 </slide>
 {{/ slides}}
 
