--- a/inst/templates/landslide.html
+++ b/inst/templates/landslide.html
@@ -69,11 +69,11 @@
           </div>
           <div class="presenter_notes">
             <header><h1>Presenter Notes</h1></header>
-            {{#p_notes}}
+            {{# pnotes}}
             <section>
               {{{ . }}}
             </section>
-            {{/p_notes}}
+            {{/ pnotes}}
           </div>
           
           <div class="modal hide" id="source-{{ num }}" style='display:none'>
