modify dzslides layouts

--- a/inst/libraries/frameworks/dzslides/layouts/deck.html
+++ b/inst/libraries/frameworks/dzslides/layouts/deck.html
@@ -122,9 +122,8 @@
      text-align:justify;
    }
    </style>
-<body>
   {{#slides}}
-    {{{ slide }}}
+    {{{ rendered }}}
   {{/slides}}
 
 <!-- dzslides core
@@ -132,7 +131,7 @@
 #
 #     __  __  __       .  __   ___  __
 #    |  \  / /__` |    | |  \ |__  /__`
-#    |__/ /_ .__/ |___ | |__/ |___ .__/ core :€
+#    |__/ /_ .__/ |___ | |__/ |___ .__/ core :
 #
 #
 # The following block of code is not supposed to be edited.
@@ -504,5 +503,4 @@
 
 </script>
 {{> javascripts }}
-</body>
 </html>
