--- a/assets/layouts/div.html
+++ b/assets/layouts/div.html
@@ -1,3 +1,5 @@
+<div class='container'>
+<div class='span10 offset1'>
 <div class="row-fluid {{ class }}" id="{{ id }}">
   <div class="span4">
     {{{ first }}}
@@ -9,3 +11,6 @@
     {{{ third }}}
   </div>
 </div>
+</div>
+</div>
+
