--- a/assets/layouts/hero.html
+++ b/assets/layouts/hero.html
@@ -1,7 +1,17 @@
 <div class="hero-unit">
-  {{{ header }}}
-  {{{ content }}}
-  <br/><br/>
+ <div class="container" style="padding-top:50px;">
+   <div class="row-fluid">
+     <div class='span10 offset1'>
+     <div class="span5">
+       {{{ video }}}
+     </div>
+     <div class="span5 offset2">
+      {{{ header }}}
+      {{{ content }}} 
+     </div>
+     </div>
+   </div>
+ </div>
 </div>
 <section id="social-buttons">
   <span class="watch">
