modify link to presentation

--- a/samples/impressjs/libraries/frameworks/impressjs/layouts/social.html
+++ b/samples/impressjs/libraries/frameworks/impressjs/layouts/social.html
@@ -5,7 +5,7 @@
   {{/github}}
   {{# twitter }}
   <a href="http://twitter.com/share" class="twitter-share-button" data-text="{{text}}" 
-    data-url="http://www.slidify.org">  
+    data-url="http://www.slidify.org/samples/impressjs">  
   </a>
   {{/ twitter }}
   <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
